tests/fail/t3.hir
// 1 : wrong date and datetime format - month

module datetime {
    def date(){
        x0:date = 2019-00:date; // wrong month
    }
}

